커스텀 아이템 몇개 추가 + 커스텀 아이템 보기 추가 + 인벤토리 쿨타임