@@ -8,6 +8,7 @@ import com.comphenix.protocol.events.PacketEvent;
 import main.cmdhandler.CMDHandler;
 import main.eventhandler.EventListener;
 import main.gamehandler.GameHandler;
+import main.timerhandler.InvOpenCDHandler;
 import net.kyori.adventure.key.Key;
 import net.kyori.adventure.sound.Sound;
 import net.kyori.adventure.text.Component;
@@ -41,9 +42,10 @@ import static java.lang.String.format;
 
 public final class Main extends JavaPlugin {
     public static ItemStack ZOMBIE_PIECE, ZOMBIE_POWDER, ZOMBIE_POWER, ZOMBIE_TRACE, CORE_OF_PURIFICATION, CORE_OF_CREATION, CORE_OF_DESTRUCTION,
-            PURIFICATION_STAFF, CREATION_WAND, DESTRUCTION_AXE, ZOMBIE_BREAKER;
+            PURIFICATION_STAFF, CREATION_WAND, DESTRUCTION_AXE, ZOMBIE_BREAKER, D_SWORD, D_HELMET, D_CHESTPLATE, D_LEGGINGS, D_BOOTS, POWER_CRYSTAL;
     public static final List<String> EXCEPTIONS = new ArrayList<>();
     public static final List<String> customRecipeKeys = new ArrayList<>();
+    public static final List<ItemStack> customItems = new ArrayList<>();
     public static final List<NamespacedKey> recipeKeys = new ArrayList<>();
     private static final ConsoleCommandSender LOGGER = Bukkit.getConsoleSender();
     @Override
@@ -54,6 +56,8 @@ public final class Main extends JavaPlugin {
 
             Bukkit.getPluginManager().registerEvents(new EventListener(), this);
 
+            Bukkit.getScheduler().scheduleSyncRepeatingTask(this, new InvOpenCDHandler(), 0, 1);
+
             this.getDescription().getCommands().keySet().forEach(s -> { /* 커맨드 & 탭컴플리터 등록 */
                 Objects.requireNonNull(getCommand(s)).setExecutor(new CMDHandler()); /* 커맨드 처리 클래스 등록 */
                 Objects.requireNonNull(getCommand(s)).setTabCompleter(new CMDHandler()); /* 탭컴플리터(커맨드 제안) 등록 */
@@ -63,18 +67,31 @@ public final class Main extends JavaPlugin {
             sh5.put(Enchantment.DAMAGE_ALL, 5);
             HashMap<Enchantment, Integer> sh10 = new HashMap<>();
             sh10.put(Enchantment.DAMAGE_ALL, 10);
+            HashMap<Enchantment, Integer> pr3 = new HashMap<>();
+            pr3.put(Enchantment.PROTECTION_ENVIRONMENTAL, 3);
 
-            ZOMBIE_PIECE = customItem(Material.GREEN_DYE, 1, "§a좀비 조각", Arrays.asList("§7좀비 가루 9개를 모아 만든 조각이다.", "§7다른 물건과 조합할 수 있을 것 같다."), true, null);
-            ZOMBIE_POWDER = customItem(Material.GUNPOWDER,1, "§f좀비 가루", Arrays.asList("§7적게나마 온기가 느껴진다.", "", "§8모든 좀비에게서 §95%§8 확률로 1-3개 드랍"), false, null);
-            ZOMBIE_POWER = customItem(Material.DIAMOND_SWORD,1, "§e★★☆ §e좀비의 힘", List.of("§7날카로움 V", "", "§8모든 좀비에게서 §d0.03%§8 확률로 드랍"), true, List.of(sh5));
-            ZOMBIE_TRACE = customItem(Material.POTION,1, "§c좀비의 흔적", List.of("§7즉시 치유 II", "§e우클릭 시 즉시 사용됨", "", "§8모든 좀비에게서 §50.1%§8 확률로 드랍"), true, null);
-            CORE_OF_PURIFICATION = customItem(Material.DIAMOND,1, "§d§l정화의 코어", Arrays.asList("§d정화의 좀비§7에게서 떨어진 코어다.", "§7유용한 아이템으로 만들 수 있을 것 같다.", "", "§d정화의 좀비§8에게서 확정적으로 드랍"), true, null);
-            CORE_OF_CREATION = customItem(Material.FEATHER,1, "§b§l창조의 코어", Arrays.asList("§b창조의 좀비§7에게서 떨어진 코어다.", "§7유용한 아이템으로 만들 수 있을 것 같다.", "", "§b창조의 좀비§8에게서 확정적으로 드랍"), true, null);
-            CORE_OF_DESTRUCTION = customItem(Material.END_CRYSTAL,1, "§c§l파괴의 코어", Arrays.asList("§c파괴의 좀비§7에게서 떨어진 코어다.", "§7유용한 아이템으로 만들 수 있을 것 같다.", "", "§c파괴의 좀비§8에게서 확정적으로 드랍"), true, null);
-            PURIFICATION_STAFF = customItem(Material.NETHERITE_SHOVEL,1, "§e★★★ §d정화의 스태프", Arrays.asList("§7날카로움 V", "", "§a능력: §e힐링 킬링", "§c적 처치§7 시 근처 §e플레이어§7에게", "§d재생 II§7를 §a1§7초간 부여한다."), true, List.of(sh5));
-            CREATION_WAND = customItem(Material.NETHERITE_PICKAXE,1, "§e★★★ §b창조의 지팡이", Arrays.asList("§7날카로움 V", "", "§a능력: §e아군 생성기", "§c적 처치§7 시 적의 위치에 §c체력 §a1,", "§c공격력 §a1§7의 친화적 §f눈사람§7을 §b소환§7한다."), true, List.of(sh5));
-            DESTRUCTION_AXE = customItem(Material.NETHERITE_AXE, 1, "§e★★★ §c파괴의 도끼", Arrays.asList("§7날카로움 V", "", "§a능력: §e폭발성 날", "§6적 타격§7 시 §5낮은 확률§7로 적의 위치에", "§a5§7의 §c피해§7를 주는 강력한 §e폭발§7을 생성시킨다."), true, List.of(sh5));
-            ZOMBIE_BREAKER = customItem(Material.NETHERITE_SWORD,1, "§c⭐ §4좀비 브레이커", Arrays.asList("§6날카로움 X", "", "§a능력: §d생명의 빛", "§6적 타격§7 시 §5낮은 확률§7로 §e플레이어§7는 §a2§7의 체력을", "§d회복§7하고 §2좀비§7는 §a6§7의 §c피해§7를 입는 §e폭발§7이 일어난다."), true, List.of(sh10));
+            // 무기류
+            D_SWORD = customItem(Material.IRON_SWORD, 1, "§e★☆☆ §f보급형 검", Arrays.asList("§7날카로움 V", "", "§7간단한 보급형 검 한 자루다.", "§7성능은 그럭저럭. 더 좋은 검을 찾아보자."), true, List.of(sh5), true);
+            ZOMBIE_POWER = customItem(Material.DIAMOND_SWORD,1, "§e★★☆ §e좀비의 힘", List.of("§7날카로움 V", "", "§c좀비의 강력한 기운§7이 가득 담겨있다.", "§7다른 좀비 관련 드랍 아이템들과 조합하면", "§5아주 강력한 §7무기를 만들 수 있을 것 같다.", "§8모든 좀비에게서 §d1%§8 확률로 드랍"), true, List.of(sh5), true);
+            PURIFICATION_STAFF = customItem(Material.NETHERITE_SHOVEL,1, "§e★★★ §d정화의 스태프", Arrays.asList("§7날카로움 V", "", "§a능력: §e힐링 킬링", "§c적 처치§7 시 근처 §e플레이어§7에게", "§d재생 II§7를 §a1§7초간 부여한다."), true, List.of(sh5), true);
+            CREATION_WAND = customItem(Material.NETHERITE_PICKAXE,1, "§e★★★ §b창조의 지팡이", Arrays.asList("§7날카로움 V", "", "§a능력: §e아군 생성기", "§c적 처치§7 시 적의 위치에 §c체력 §a1,", "§c공격력 §a1§7의 친화적 §f눈사람§7을 §b소환§7한다."), true, List.of(sh5), true);
+            DESTRUCTION_AXE = customItem(Material.NETHERITE_AXE, 1, "§e★★★ §c파괴의 도끼", Arrays.asList("§7날카로움 V", "", "§a능력: §e폭발성 날", "§6적 타격§7 시 §5낮은 확률§7로 적의 위치에", "§a5§7의 §c피해§7를 주는 강력한 §e폭발§7을 생성시킨다."), true, List.of(sh5), true);
+            ZOMBIE_BREAKER = customItem(Material.NETHERITE_SWORD,1, "§c⭐ §4좀비 브레이커", Arrays.asList("§6날카로움 X", "", "§a능력: §d생명의 빛", "§6적 타격§7 시 §5낮은 확률§7로 §e플레이어§7는 §a2§7의 체력을", "§d회복§7하고 §2좀비§7는 §a6§7의 §c피해§7를 입는 §e폭발§7이 일어난다."), true, List.of(sh10), true);
+
+            // 방어구류
+            D_HELMET = customItem(Material.IRON_HELMET, 1, "§e★☆☆ §f보급형 헬멧", List.of("§7보호 III"), false, List.of(pr3), true);
+            D_CHESTPLATE = customItem(Material.IRON_CHESTPLATE, 1, "§e★☆☆ §f보급형 갑옷", List.of("§7보호 III"), false, List.of(pr3), true);
+            D_LEGGINGS = customItem(Material.IRON_LEGGINGS, 1, "§e★☆☆ §f보급형 바지", List.of("§7보호 III"), false, List.of(pr3), true);
+            D_BOOTS = customItem(Material.IRON_BOOTS, 1, "§e★☆☆ §f보급형 부츠", List.of("§7보호 III"), false, List.of(pr3), true);
+
+            // 기타
+            ZOMBIE_POWDER = customItem(Material.GUNPOWDER,1, "§f좀비 가루", Arrays.asList("§7적게나마 온기가 느껴진다.", "", "§8모든 좀비에게서 §225%§8 확률로 1-3개 드랍"), false, null, true);
+            ZOMBIE_TRACE = customItem(Material.POTION,1, "§c좀비의 흔적", List.of("§7즉시 치유 II", "§e우클릭 시 즉시 사용됨", "", "§8모든 좀비에게서 §53%§8 확률로 드랍"), true, null, true);
+            CORE_OF_PURIFICATION = customItem(Material.DIAMOND,1, "§d§l정화의 코어", Arrays.asList("§d정화의 좀비§7에게서 떨어진 코어다.", "§7유용한 아이템으로 만들 수 있을 것 같다.", "", "§d정화의 좀비§8에게서 확정적으로 드랍"), true, null, true);
+            CORE_OF_CREATION = customItem(Material.FEATHER,1, "§b§l창조의 코어", Arrays.asList("§b창조의 좀비§7에게서 떨어진 코어다.", "§7유용한 아이템으로 만들 수 있을 것 같다.", "", "§b창조의 좀비§8에게서 확정적으로 드랍"), true, null, true);
+            CORE_OF_DESTRUCTION = customItem(Material.END_CRYSTAL,1, "§c§l파괴의 코어", Arrays.asList("§c파괴의 좀비§7에게서 떨어진 코어다.", "§7유용한 아이템으로 만들 수 있을 것 같다.", "", "§c파괴의 좀비§8에게서 확정적으로 드랍"), true, null, true);
+            ZOMBIE_PIECE = customItem(Material.GREEN_DYE, 1, "§a좀비 조각", Arrays.asList("§7좀비 가루 9개를 모아 만든 조각이다.", "§7다른 물건과 조합할 수 있을 것 같다."), true, null, true);
+            POWER_CRYSTAL = customItem(Material.NETHER_STAR, 1, "§b파워 결정체", Arrays.asList("§b정화기§7의 파워를 랜덤하게 충전해준다.", "", "§8모든 좀비에게서 §910%§8 확률로 드랍"), true, null, true);
 
             ShapedRecipe r1 = new ShapedRecipe(new NamespacedKey(this, "purifiacation_staff"), PURIFICATION_STAFF);
             r1.shape("PCP", "PSP", "PPP");
@@ -123,15 +140,19 @@ public final class Main extends JavaPlugin {
                                 @Override
                                 public void run() {
                                     try {
-                                        Inventory gui = Bukkit.createInventory(null, 27, Component.text("§2게임 시작 메뉴"));
-                                        for (int i = 0; i < 27; i++)
-                                            gui.setItem(i, Main.customItem(Material.WHITE_STAINED_GLASS_PANE, 1, " ", null, false, null));
-                                        gui.setItem(10, Main.customItem(Material.IRON_SWORD, 1, "§e일반 모드", Arrays.asList("§b클래식한 일반 모드입니다.", "§e100§a웨이브까지 버티는게 목표이며, 모든 플레이어가", "§2좀비§a가 될 경우 §c패배§a하는 시스템입니다."), true, null));
-                                        gui.setItem(12, Main.customItem(Material.GOLDEN_SWORD, 1, "§2숙주 처치 모드", Arrays.asList("§2숙주 좀비§b가 등장하는 모드입니다.", "§a플레이어 수에 따라 §e특정 웨이브§a에 아주 강력한", "§4숙주 좀비§a가 등장합니다. §4숙주 좀비§a를 처치할 시", "§a좀비가 더 이상 생성되지 않고 §e감염자§a들은 §c부활할 수 없습니다§a.", "§a이때 감염자들을 모두 §c처치§a하거나 §b치료§a할 경우 §d승리§a합니다."), true, null));
-                                        gui.setItem(14, Main.customItem(Material.DIAMOND_SWORD, 1, "§c하드코어 모드", Arrays.asList("§b일반 모드의 어려운 버전입니다.", "§a좀비들의 §c공격력§a이 강해지고 §9속도§a가 빨라지며", "§e백신§a을 사용할 수 §c없습니다§a."), true, null));
-                                        gui.setItem(16, Main.customItem(Material.NETHERITE_SWORD, 1, "§4불가능 모드", List.of("§8???"), true, null));
-                                        p.openInventory(gui);
-                                        p.playSound(Sound.sound(Key.key("minecraft:entity.experience_orb.pickup"), Sound.Source.MASTER, 0.75F, 1));
+                                        if (!InvOpenCDHandler.getInvOpenCooldoawn().containsKey(p)) {
+                                            InvOpenCDHandler.getInvOpenCooldoawn().put(p, 1);
+                                            Inventory gui = Bukkit.createInventory(null, 27, Component.text("§2게임 시작 메뉴"));
+                                            ItemStack blank = Main.customItem(Material.WHITE_STAINED_GLASS_PANE, 1, " ", null, false, null, false);
+                                            for (int i = 0; i < 27; i++)
+                                                gui.setItem(i, blank);
+                                            gui.setItem(10, Main.customItem(Material.IRON_SWORD, 1, "§e일반 모드", Arrays.asList("§b클래식한 일반 모드입니다.", "§e100§a웨이브까지 버티는게 목표이며, 모든 플레이어가", "§2좀비§a가 될 경우 §c패배§a하는 시스템입니다."), true, null, false));
+                                            gui.setItem(12, Main.customItem(Material.GOLDEN_SWORD, 1, "§2숙주 처치 모드", Arrays.asList("§2숙주 좀비§b가 등장하는 모드입니다.", "§a플레이어 수에 따라 §e특정 웨이브§a에 아주 강력한", "§4숙주 좀비§a가 등장합니다. §4숙주 좀비§a를 처치할 시", "§a좀비가 더 이상 생성되지 않고 §e감염자§a들은 §c부활할 수 없습니다§a.", "§a이때 감염자들을 모두 §c처치§a하거나 §b치료§a할 경우 §d승리§a합니다."), true, null, false));
+                                            gui.setItem(14, Main.customItem(Material.DIAMOND_SWORD, 1, "§c하드코어 모드", Arrays.asList("§b일반 모드의 어려운 버전입니다.", "§a좀비들의 §c공격력§a이 강해지고 §9속도§a가 빨라지며", "§e백신§a을 사용할 수 §c없습니다§a."), true, null, false));
+                                            gui.setItem(16, Main.customItem(Material.NETHERITE_SWORD, 1, "§4불가능 모드", List.of("§8???"), true, null, false));
+                                            p.openInventory(gui);
+                                            p.playSound(Sound.sound(Key.key("minecraft:entity.experience_orb.pickup"), Sound.Source.MASTER, 0.75F, 1));
+                                        }
                                     } catch (Exception e1) {
                                         Main.printException(e1);
                                     }
@@ -175,8 +196,8 @@ public final class Main extends JavaPlugin {
                 try {
                     Block gate = Objects.requireNonNull(Bukkit.getWorld("world")).getBlockAt(252, 72, 208);
                     EndGateway gateway = (EndGateway) gate.getState();
-                    if (GameHandler.beaconAlive) gateway.setAge(120);
-                    else gateway.setAge(gateway.getAge()-30);
+                    if (GameHandler.beaconAlive) gateway.setAge(100);
+                    else gateway.setAge(gateway.getAge()+80);
                     gateway.update();
                 } catch (Exception e) {
                     printException(e);
@@ -207,7 +228,7 @@ public final class Main extends JavaPlugin {
         }
     }
 
-    public static ItemStack customItem(@NotNull Material item, @NotNull Integer amount, @NotNull String name, @Nullable List<String> lore, @NotNull Boolean shiny, @Nullable List<HashMap<Enchantment, Integer>> enchantments) {
+    public static ItemStack customItem(@NotNull Material item, @NotNull Integer amount, @NotNull String name, @Nullable List<String> lore, @NotNull Boolean shiny, @Nullable List<HashMap<Enchantment, Integer>> enchantments, @NotNull Boolean save) {
         try {
             ItemStack i = new ItemStack(item, amount);
             ItemMeta m = i.getItemMeta();
@@ -222,6 +243,7 @@ public final class Main extends JavaPlugin {
             m.setUnbreakable(true);
             m.addItemFlags(ItemFlag.HIDE_ATTRIBUTES, ItemFlag.HIDE_UNBREAKABLE, ItemFlag.HIDE_DESTROYS, ItemFlag.HIDE_DYE, ItemFlag.HIDE_ENCHANTS, ItemFlag.HIDE_PLACED_ON, ItemFlag.HIDE_POTION_EFFECTS);
             i.setItemMeta(m);
+            if (save) customItems.add(i);
             return i;
         } catch (Exception e) {
             printException(e);
